# BEMPPSolver

./: .gitignore  README.md  bemppsolver.py  cleanmesh.py  prepare_visualization_data.py  pyproject.toml  visualizer.py
docs/: advanced-configuration.md  examples.md
src/bemppsolver/: __init__.py  cli.py  config.py  mesh_clean.py  plotting.py  postprocess.py  solver.py
tests/: test_cli.py  test_config.py  test_postprocess_plotting.py  test_solver_helpers.py
